# spells

./: .gitignore  .pylintrc  .todo.md  BLB_card_file.csv  CLAUDE.md  Card Attributes.ipynb  OTJ_card_file.csv  README.md  package-lock.json  pyproject.toml  test.json
.github/workflows/: publish.yml
docs/: Bayesian Cohorts.ipynb  P1P1 Simulation.ipynb  _config.yml  _toc.yml  intro.md
examples/: Bayesian Cohorts.ipynb  Card Attributes.ipynb  Cohorts.ipynb  Metagame Summary.ipynb  ipy.py
mdu/: cache.py  cache_17l.py  caching.py  calcs.py  card.py  columns.py  draft_data.py  enums.py  extensions.py  filter.py  get_dytpes.py  get_schema.py  manifest.py  scryfall.py
mdu/config/: cache_17l.py  cache_17l.toml  mdu_cfg.py  scryfall_cfg.py  scryfall_config.json
scripts/: get_cards.py  get_file.py  interactive.py  post_install.py  release.sh  spells.py
spells/: __init__.py  cache.py  cache_17l.py  card.py  card_data_files.py  cards.py  columns.py  config.py  draft_data.py  draft_model.py  enums.py  extension.py  external.py  filter.py  get_schema.py  log.py  manifest.py  schema.py  scryfall.py  utils.py
spells/config/: spells_cfg.py
src/magic_data_utils/: scryfall.py
src/magic_data_utils/config/: scryfall_config.json
tests/: card_ratings_view_test.py  cdfs_test.py  conftest.py  context_test.py  draft_data_test.py  draft_model_test.py  draft_test.py  external_test.py  filter_test.py  filters_test.py  manifest_test.py
tests/data/17l-files/: BLB_PremierDraft_draft.csv  BLB_PremierDraft_game.csv  BLB_card.csv
tests/data/local/BLB/: 4d1b566755a0f9.parquet  bec794aaf86f7eb.parquet
