[project]
name = "spells-mtg"
dynamic = ["version"]
description = "analaysis of 17Lands.com public datasets"
authors = [
    {name = "Joel Barnes", email = "oelarnes@gmail.com"},
]
dependencies = [
    "pymongo>=4.9.1",
    "pandas>=2.2.3",
    "numpy>=2.1.1",
    "requests>=2.32.3",
    "matplotlib>=3.9.2",
    "polars[pandas]>=1.12.0",
    "pyarrow>=18.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
spells = "python scripts/spells.py"
ispells = "ipython -i scripts/interactive.py"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.27.0",
    "pytest>=8.3.3",
    "black>=24.10.0",
    "ruff>=0.7.4",
]

[tool.pdm.version]
source = "scm"

